--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -4,3 +4,6 @@
 @import url("nav.css");
 @import url("new-tweet.css");
 @import url("tweet-log.css");
+@import url("tweet-log-hover.css");
+/* BLOAT? */
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
