--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,7 @@
   position: fixed;
   right: 0;
   top: 0;
+  z-index: 100;
 }
 
 .navbar-header {
@@ -17,7 +18,7 @@
 
 .navbar-logo {
   height:80px;
-  width: 80px;
+  width:80px;
 }
 
 .navbar-header,
