AJAX and form validation implemented
POST submits data to 'database' via AJAX call. On success, calls loadTweets function to refresh the log. If guard statements before POST AJAX route check for a non-empty textarea and a tweet below the character limit.

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,3 +1,7 @@
+.danger {
+  color: red;
+}
+
 .newtweet {
   background: #eee;
   border: 1px solid gray;
@@ -9,6 +13,11 @@
   float: right;
 }
 
+.newtweet-flash {
+  display: none;
+  color: red;
+}
+
 .newtweet-header {
   border-bottom: 1px solid #224;
 }
@@ -16,8 +25,4 @@
 .newtweet-textarea {
   padding: 0.5em;
   width: 100%;
-}
-
-.newtweet-counter.danger {
-  color: red;
 }
