--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,7 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i");
-@import url("../vendor/normalize-4.1.1.css");
-@import url("layout.css");
-@import url("nav.css");
-@import url("new-tweet.css");
-@import url("tweet-log.css");
-@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+body {
+  margin: 0;
+  background-color: #bada55; }
