--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
-$badass: #bada55;
-
-body {
-  margin: 0;
-  background-color: $badass;
-}
+@import '../public/vendor/normalize-4.1.1.css';
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i");
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+@import 'layout';
+@import 'nav';
+@import 'tweets';
