--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,10 +1,11 @@
-@import url(../public/vendor/normalize-4.1.1.css);
+@import url("../public/styles/normalize-4.1.1.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 /*Variables*/
 /*Selectors*/
 body {
-  margin: 0; }
+  margin: 0;
+  font-family: "Roboto Condensed", sans-serif; }
 
 html {
   box-sizing: border-box; }
@@ -13,55 +14,49 @@ html {
   box-sizing: inherit; }
 
 main {
-  background: #eee;
+  background: white;
   margin: auto;
-  padding: 140px 2em 2em 2em;
+  padding: 120px 2em 2em 2em;
   width: 450px; }
-
-.navbar {
-  align-items: center;
-  background: #00a087;
-  color: #e8fdff;
-  display: flex;
-  height: 80px;
-  justify-content: space-between;
-  left: 0;
-  padding: 0 2em;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 100; }
-
-.navbar-compose {
-  background-color: #44c789;
-  border-radius: 0.5em;
-  border: 1px solid #18ab40;
-  color: #e8fdff;
-  cursor: pointer;
-  line-height: 24px;
-  padding: 1em 1.5em; }
-
-.navbar-compose:hover {
-  background-color: #5cbf6a; }
-
-.navbar-header {
-  font-size: 2em;
-  line-height: 80px;
-  padding: 0 0 0 10px; }
-
-.navbar-left {
-  align-items: center;
-  display: flex; }
-
-.navbar-logo {
-  height: 80px;
-  width: 80px; }
 
 .danger {
   color: red; }
 
+.navbar {
+  align-items: center;
+  background: #00a087;
+  display: flex;
+  height: 80px;
+  justify-content: space-between;
+  left: 0;
+  padding: 0 1.5em;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 100; }
+  .navbar-compose {
+    background-color: #44c789;
+    border-radius: 0.5em;
+    border: 1px solid #18ab40;
+    color: #e8fdff;
+    cursor: pointer;
+    line-height: 24px;
+    padding: 1em 1.5em; }
+    .navbar-compose:hover {
+      background-color: #5cbf6a; }
+  .navbar-header {
+    font-size: 2em;
+    line-height: 80px;
+    padding: 0 0 0 10px; }
+  .navbar-left {
+    align-items: center;
+    display: flex; }
+  .navbar-logo {
+    height: 80px;
+    width: 80px; }
+
 .newtweet {
-  background: #eee;
+  background: #ddd;
   border: 1px solid gray;
   border-radius: 0.5em;
   display: none;
@@ -109,7 +104,7 @@ main {
   font-size: 1.1em; }
 
 .tweet-footer {
-  border-top: 1px solid #eee;
+  border-top: 1px solid #ddd;
   line-height: 2.5em;
   padding: 0 1em; }
 
@@ -121,7 +116,7 @@ main {
   /*would text-align be more appropriate?*/ }
 
 .tweet-header {
-  background: #eee;
+  background: #ddd;
   border-radius: 0.5em 0.5em 0 0;
   opacity: 0.65;
   padding: 1em; }
