--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,8 +1,7 @@
-@import url("../public/styles/normalize-4.1.1.css");
+@import url("/vendor/normalize-4.1.1.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 /*Variables*/
-/*Selectors*/
 body {
   margin: 0;
   font-family: "Roboto Condensed", sans-serif; }
@@ -38,13 +37,14 @@ main {
     background-color: #44c789;
     border-radius: 0.5em;
     border: 1px solid #18ab40;
-    color: #e8fdff;
+    color: white;
     cursor: pointer;
     line-height: 24px;
     padding: 1em 1.5em; }
     .navbar-compose:hover {
       background-color: #5cbf6a; }
   .navbar-header {
+    color: white;
     font-size: 2em;
     line-height: 80px;
     padding: 0 0 0 10px; }
@@ -61,81 +61,62 @@ main {
   border-radius: 0.5em;
   display: none;
   padding: 0 1em 1em 1em; }
-
-.newtweet-counter {
-  float: right; }
-
-.newtweet-header {
-  border-bottom: 1px solid #224; }
-
-.newtweet-flash {
-  display: none;
-  color: red; }
-
-.newtweet-textarea {
-  padding: 0.5em;
-  width: 100%; }
+  .newtweet-counter {
+    float: right; }
+  .newtweet-header {
+    border-bottom: 1px solid #224; }
+  .newtweet-flash {
+    display: none;
+    color: red; }
+  .newtweet-textarea {
+    padding: 0.5em;
+    width: 100%; }
 
 .tweet {
   border: 1px solid #aaa;
   border-radius: 0.5em;
-  margin-top: 0.5em; }
-
-.tweet, .tweet-header, .tweet-icons {
-  transition: all 0.3s; }
-
-.tweet:hover {
-  border: 1px solid #333; }
-
-.tweet:hover .tweet-header, .tweet:hover .tweet-icons {
-  opacity: 1.0; }
-
-.tweet-age {
-  float: left;
-  margin: 0; }
-
-.tweet-avatar {
-  float: left;
-  height: 50px;
-  width: 50px; }
-
-.tweet-content {
-  padding: 1em 1.5em;
-  font-size: 1.1em; }
-
-.tweet-footer {
-  border-top: 1px solid #ddd;
-  line-height: 2.5em;
-  padding: 0 1em; }
-
-.tweet-handle {
-  color: #aaa;
-  float: right;
-  line-height: 1.9em;
-  margin: 0;
-  /*would text-align be more appropriate?*/ }
-
-.tweet-header {
-  background: #ddd;
-  border-radius: 0.5em 0.5em 0 0;
-  opacity: 0.65;
-  padding: 1em; }
-
-/*clearfix*/
-.tweet-header::after, .tweet-footer::after {
-  content: "";
-  display: table;
-  clear: both; }
-
-.tweet-icons {
-  float: right;
-  color: #00a087;
-  opacity: 0; }
-
-.tweet-icons .fa {
-  padding: 0 0 0 0.5em; }
-
-.tweet-poster {
-  float: left;
-  margin: 0;
-  padding: 0 0 0 0.5em; }
+  margin-top: 1em; }
+  .tweet, .tweet .tweet-header, .tweet .tweet-icons {
+    transition: all 0.3s; }
+  .tweet:hover {
+    border-color: #333; }
+    .tweet:hover .tweet-header, .tweet:hover .tweet-icons {
+      opacity: 1; }
+  .tweet-age {
+    float: left;
+    margin: 0; }
+  .tweet-avatar {
+    float: left;
+    height: 50px;
+    width: 50px; }
+  .tweet-content {
+    padding: 1em 1.5em;
+    font-size: 1.1em; }
+  .tweet-footer {
+    border-top: 1px solid #ddd;
+    line-height: 2.5em;
+    padding: 0 1em; }
+  .tweet-handle {
+    color: #aaa;
+    float: right;
+    line-height: 1.9em;
+    margin: 0; }
+  .tweet-header {
+    background: #ddd;
+    border-radius: 0.5em 0.5em 0 0;
+    opacity: 0.65;
+    padding: 1em; }
+  .tweet-header::after, .tweet-footer::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .tweet-icons {
+    float: right;
+    color: #bada55;
+    opacity: 0; }
+    .tweet-icons .fa {
+      padding: 0 0 0 0.5em; }
+  .tweet-poster {
+    float: left;
+    margin: 0;
+    padding: 0 0 0 0.5em; }
