--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import url("../public/styles/normalize-4.1.1.css");
+@import url("/vendor/normalize-4.1.1.css");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
@@ -10,9 +10,9 @@ $font-stack: 'Roboto Condensed', sans-serif;
 $lightgrey: #ddd;
 $nav-height: 80px;
 $primary-color: #00a087;
-$text-color: #244751;
+$dark-color: #244751;
+$trans-time: 0.3s;
 
-/*Selectors*/
 body {
  margin: 0;
  font-family: $font-stack;
@@ -41,7 +41,7 @@ main {
   align-items: center;
   background: $primary-color;
   display: flex;
-  height: 80px;
+  height: $nav-height;
   justify-content: space-between;
   left: 0;
   padding: 0 1.5em;
@@ -54,7 +54,7 @@ main {
     background-color:#44c789;
   	border-radius:0.5em;
   	border:1px solid #18ab40;
-    color: #e8fdff;
+    color: white;
   	cursor:pointer;
     line-height: 24px;
     padding: 1em 1.5em;
@@ -65,8 +65,9 @@ main {
   }
 
   &-header {
+    color:white;
     font-size: 2em;
-    line-height: 80px;
+    line-height: $nav-height;
     padding: 0 0 0 10px;
   }
 
@@ -76,8 +77,8 @@ main {
   }
 
   &-logo {
-    height:80px;
-    width:80px;
+    height:$nav-height;
+    width:$nav-height;
   }
 }
 
@@ -88,100 +89,95 @@ main {
   border-radius: 0.5em;
   display: none;
   padding: 0 1em 1em 1em;
-}
 
-.newtweet-counter {
-  float: right;
-}
+  &-counter {
+    float: right;
+  }
 
-.newtweet-header {
-  border-bottom: 1px solid #224;
-}
+  &-header {
+    border-bottom: 1px solid #224;
+  }
 
-.newtweet-flash {
-  display: none;
-  color: $danger;
-}
+  &-flash {
+    display: none;
+    color: $danger;
+  }
 
-.newtweet-textarea {
-  padding: 0.5em;
-  width: 100%;
+  &-textarea {
+    padding: 0.5em;
+    width: 100%;
+  }
 }
 
 .tweet {
   border: 1px solid #aaa;
   border-radius: 0.5em;
-  margin-top: 0.5em;
-}
+  margin-top: 1em;
+  &, & .tweet-header, & .tweet-icons {
+    transition: all $trans-time;
+  }
+  &:hover {
+    border-color: #333;
+    & .tweet-header, & .tweet-icons {
+      opacity: 1;
+    }
+  }
 
-.tweet, .tweet-header, .tweet-icons {
-  transition: all 0.3s;
-}
+  &-age {
+    float:left;
+    margin:0;
+  }
 
-.tweet:hover {
-  border: 1px solid #333;
-}
+  &-avatar {
+    float: left;
+    height: 50px;
+    width: 50px;
+  }
 
-.tweet:hover .tweet-header, .tweet:hover .tweet-icons {
-  opacity: 1.0;
-}
+  &-content {
+    padding: 1em 1.5em;
+    font-size: 1.1em;
+  }
 
-.tweet-age {
-  float:left;
-  margin:0;
-}
+  &-footer {
+    border-top: 1px solid $lightgrey;
+    line-height: 2.5em;
+    padding: 0 1em;
+  }
 
-.tweet-avatar {
-  float: left;
-  height: 50px;
-  width: 50px;
-}
+  &-handle {
+    color: #aaa;
+    float: right;
+    line-height: 1.9em;
+    margin: 0;
+  }
 
-.tweet-content {
-  padding: 1em 1.5em;
-  font-size: 1.1em;
-}
+  &-header {
+    background: $lightgrey;
+    border-radius: 0.5em 0.5em 0 0;
+    opacity: 0.65;
+    padding: 1em;
+  }
 
-.tweet-footer {
-  border-top: 1px solid $lightgrey;
-  line-height: 2.5em;
-  padding: 0 1em;
-}
-
-.tweet-handle {
-  color: #aaa;
-  float: right;
-  line-height: 1.9em;
-  margin: 0;
-  /*would text-align be more appropriate?*/
-}
-
-.tweet-header {
-  background: $lightgrey;
-  border-radius: 0.5em 0.5em 0 0;
-  opacity: 0.65;
-  padding: 1em;
-}
-
-/*clearfix*/
-.tweet-header::after, .tweet-footer::after {
+  &-header::after, &-footer::after {
     content:"";
     display:table;
     clear:both;
-}
+  }
 
-.tweet-icons {
-  float:right;
-  color: $primary-color;
-  opacity: 0;
-}
+  &-icons {
+    float:right;
+    color: $accent-color;
+    opacity: 0;
 
-.tweet-icons .fa {
-  padding: 0 0 0 0.5em;
-}
+    .fa {
+      padding: 0 0 0 0.5em;
+    }
+  }
 
-.tweet-poster {
-  float:left;
-  margin: 0;
-  padding: 0 0 0 0.5em;
+  &-poster {
+    float:left;
+    margin: 0;
+    padding: 0 0 0 0.5em;
+  }
 }
