--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,6 +2,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 /*Variables*/
+/*Element selectors*/
 body {
   margin: 0;
   font-family: "Roboto Condensed", sans-serif; }
@@ -16,8 +17,9 @@ main {
   background: white;
   margin: auto;
   padding: 120px 2em 2em 2em;
-  width: 450px; }
+  width: 600px; }
 
+/*Class selectors*/
 .danger {
   color: red; }
 
