--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,13 +5,21 @@
 /*Variables*/
 
 $accent-color: #bada55;
+$background: #f0fefa;
 $danger: red;
 $font-stack: 'Roboto Condensed', sans-serif;
-$lightgrey: #ddd;
+$lightgrey: #eee;
 $nav-height: 80px;
 $primary-color: #00a087;
 $dark-color: #244751;
 $trans-time: 0.3s;
+
+/*Mixins*/
+@mixin flex-space {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+}
 
 /*Element selectors*/
 
@@ -21,7 +29,8 @@ body {
 }
 
 html {
-  box-sizing: border-box;;
+  background: $background;
+  box-sizing: border-box;
 }
 
 *, *::before, *::after {
@@ -42,11 +51,9 @@ main {
 }
 
 .navbar {
-  align-items: center;
   background: $primary-color;
-  display: flex;
   height: $nav-height;
-  justify-content: space-between;
+  @include flex-space
   left: 0;
   padding: 0 1.5em;
   position: fixed;
@@ -145,6 +152,7 @@ main {
 
   &-footer {
     border-top: 1px solid $lightgrey;
+    @include flex-space
     line-height: 2.5em;
     padding: 0 1em;
   }
@@ -163,20 +171,24 @@ main {
     padding: 1em;
   }
 
-  &-header::after, &-footer::after {
+  &-header::after {
     content:"";
     display:table;
     clear:both;
   }
 
   &-icons {
-    float:right;
     color: $accent-color;
+    margin: 0;
     opacity: 0;
 
     .fa {
-      padding: 0 0 0 0.5em;
+      padding: 0 0 0 1em;
     }
+  }
+
+  &-likes {
+    padding: 0 0 0 0.5em;
   }
 
   &-poster {
