SASS middleware and refactor

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,211 +2,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
-/*Variables*/
-
-$accent-color: #bada55;
-$background: #f0fefa;
-$danger: red;
-$font-stack: 'Roboto Condensed', sans-serif;
-$lightgrey: #eee;
-$nav-height: 80px;
-$primary-color: #00a087;
-$dark-color: #244751;
-$trans-time: 0.3s;
-
-/*Mixins*/
-@mixin flex-space {
-  align-items: center;
-  display: flex;
-  justify-content: space-between;
-}
-
-/*Element selectors*/
-
-body {
- margin: 0;
- font-family: $font-stack;
-}
-
-html {
-  background: $background;
-  box-sizing: border-box;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
-}
-
-main {
-  background: white;
-  margin: auto;
-  padding: $nav-height*1.5 2em 2em 2em;
-  width: 600px;
-}
-
-/*Class selectors*/
-
-.danger {
-  color: $danger;
-}
-
-.navbar {
-  background: $primary-color;
-  height: $nav-height;
-  @include flex-space
-  left: 0;
-  padding: 0 1.5em;
-  position: fixed;
-  right: 0;
-  top: 0;
-  z-index: 100;
-
-  &-compose {
-    background-color:#44c789;
-  	border-radius:0.5em;
-  	border:1px solid #18ab40;
-    color: white;
-  	cursor:pointer;
-    line-height: 24px;
-    padding: 1em 1.5em;
-
-    &:hover {
-      background-color:#5cbf6a;
-    }
-  }
-
-  &-header {
-    color:white;
-    font-size: 2em;
-    line-height: $nav-height;
-    padding: 0 0 0 10px;
-  }
-
-  &-left {
-    align-items: center;
-    display:flex;
-  }
-
-  &-logo {
-    height:$nav-height;
-    width:$nav-height;
-  }
-}
-
-
-.newtweet {
-  background: $lightgrey;
-  border: 1px solid gray;
-  border-radius: 0.5em;
-  display: none;
-  padding: 0 1em 1em 1em;
-
-  &-counter {
-    float: right;
-  }
-
-  &-header {
-    border-bottom: 1px solid #224;
-  }
-
-  &-flash {
-    display: none;
-    color: $danger;
-  }
-
-  &-textarea {
-    padding: 0.5em;
-    width: 100%;
-  }
-}
-
-.tweet {
-  border: 1px solid #aaa;
-  border-radius: 0.5em;
-  margin-top: 1em;
-  &, & .tweet-header, & .fa, & .tweet-likes {
-    transition: all $trans-time;
-  }
-  &:hover {
-    border-color: #333;
-    & .tweet-header, & .fa, & .tweet-likes {
-      opacity: 1;
-    }
-  }
-
-  &-age {
-    float:left;
-    margin:0;
-  }
-
-  &-avatar {
-    float: left;
-    height: 50px;
-    width: 50px;
-  }
-
-  &-content {
-    padding: 1em 1.5em;
-    font-size: 1.1em;
-  }
-
-  &-footer {
-    border-top: 1px solid $lightgrey;
-    @include flex-space
-    line-height: 2.5em;
-    padding: 0 1em;
-  }
-
-  &-handle {
-    color: #aaa;
-    float: right;
-    line-height: 1.9em;
-    margin: 0;
-  }
-
-  &-header {
-    background: $lightgrey;
-    border-radius: 0.5em 0.5em 0 0;
-    opacity: 0.65;
-    padding: 1em;
-  }
-
-  &-header::after {
-    content:"";
-    display:table;
-    clear:both;
-  }
-
-  &-icons {
-    color: $accent-color;
-    margin: 0;
-
-    .fa {
-      padding: 0 0.5em;
-      opacity: 0;
-
-      &-heart {
-      opacity: 1;
-      padding: 0 0.5em;
-      transition: all $trans-time;
-
-        &:hover {
-          color: #faa3b6;
-          cursor: pointer;
-          transform: scale(1.15);
-        }
-
-        &.tweet-liked {
-          color: #872334;
-          opacity: 1;
-        }
-      }
-    }
-  }
-
-  &-poster {
-    float:left;
-    margin: 0;
-    padding: 0 0 0 0.5em;
-  }
-}
+@import 'variables';
+@import 'base';
+@import 'navbar';
+@import 'newtweet';
+@import 'tweet';
